syntax = "proto3";

package bannote.studyroomservice.roomexception.v1;

import "google/protobuf/timestamp.proto";

// 스터디룸 예외 메시지 구조
message RoomException {
  int64 id = 1;                               // 예외 ID
  int64 room_id = 2;                          // 스터디룸 ID
  string holiday_date = 3;                    // 휴일 날짜 (YYYY-MM-DD)
  string reason = 4;                          // 휴일 사유
  string opening_time = 5;                    // 임시 개방 시간 (HH:MM)
  string closing_time = 6;                    // 임시 폐쇄 시간 (HH:MM)
  int64 created_by = 7;                       // 생성자 ID (외부 서비스 참조)
  google.protobuf.Timestamp created_at = 8;   // 생성 시각
  google.protobuf.Timestamp updated_at = 9;   // 수정 시각
}

// 생성 요청 / 응답
message CreateRoomExceptionRequest {
  int64 room_id = 1;
  string holiday_date = 2;
  string reason = 3;
  string opening_time = 4;
  string closing_time = 5;
  int64 created_by = 6;
}

message CreateRoomExceptionResponse {
  RoomException room_exception = 1;
}

// 단건 조회 요청 / 응답
message GetRoomExceptionRequest {
  int64 id = 1;
}

message GetRoomExceptionResponse {
  RoomException room_exception = 1;
}

// 목록 조회 요청 / 응답
message ListRoomExceptionsRequest {
  int64 room_id = 1;       // 스터디룸 ID 필터
  string holiday_date = 2; // 특정 날짜 필터
}

message ListRoomExceptionsResponse {
  repeated RoomException room_exceptions = 1;
}

// 수정 요청 / 응답
message UpdateRoomExceptionRequest {
  int64 id = 1;
  int64 room_id = 2;
  string holiday_date = 3;
  string reason = 4;
  string opening_time = 5;
  string closing_time = 6;
}

message UpdateRoomExceptionResponse {
  RoomException room_exception = 1;
}

// 삭제 요청 / 응답
message DeleteRoomExceptionRequest {
  int64 id = 1;
}

message DeleteRoomExceptionResponse {
  bool success = 1;
  string message = 2;
}
